<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_dashboard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkable="false"
        android:title="@string/menuDashboard" />
    <item
        android:id="@+id/menu_create_message"
        android:title="@string/menucreate_inf_message" />
    <item
        android:id="@+id/menu_locations"
        android:title="@string/menulocation_list" />
    <item
        android:id="@+id/menu_map"
        android:title="@string/menumap" />
    <item
        android:id="@+id/menu_my_sensors"
        android:title="@string/menumy_hardware" />
    <item
        android:id="@+id/menu_settings"
        android:title="@string/menusettings" />
    <item
        android:id="@+id/menu_send_data"
        android:checkable="false"
        android:icon="@android:drawable/ic_menu_send"
        android:title="Send Data"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_gps"
        android:icon="@android:drawable/ic_menu_mylocation"
        android:title="GPS"
        android:visible="true"
        app:showAsAction="always" />
</menu>