<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pt.ipleiria.dei.iair.view.CreateInformativeMessageActivity">

    <TextView
        android:id="@+id/textViewCreateInformativeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_informative_message"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewTypeCreateInformativeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/informative_message_type" />

        <Spinner
            android:id="@+id/spinnerInformativeMesageTypes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewDescription" />

    <EditText
        android:id="@+id/editTextDescriptionCreateInformativeMessage"
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/textViewTimestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewTimestamp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextTimestampCreateInformativeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />

        <Button
            android:id="@+id/buttonNowCreateInformativeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonNow" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewLocationCreateInformativeMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewLocation" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerLocations"
            android:layout_width="208dp"
            android:layout_height="38dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/buttonMapCreateInformativeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonMapCreateInformativeMessage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonCancelCreateInformativeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonCancelCreateInformativeMessage" />

        <Button
            android:id="@+id/buttonSaveCreateInformativeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/buttonSaveCreateInformativeMessage" />
    </LinearLayout>

</LinearLayout>
