<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pt.ipleiria.dei.iair.view.DashboardActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/activity_dashboard_username"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewUsernamedescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="null" />
            </LinearLayout>

            <Space
                android:id="@+id/space1"
                android:layout_width="match_parent"
                android:layout_height="27dp"
                android:layout_weight="1" />

            <LinearLayout
                android:id="@+id/layouy2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/txt_view_favorite_location"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <TextView
                    android:id="@+id/textViewFavoriteLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="186dp"
                    tools:layout_editor_absoluteY="16dp" />

            </LinearLayout>

            <Space
                android:id="@+id/space2"
                android:layout_width="11dp"
                android:layout_height="27dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/textViewData"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/txt_dashboard_data"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="31dp"
                tools:layout_editor_absoluteY="49dp" />

            <Space
                android:id="@+id/space4"
                android:layout_width="match_parent"
                android:layout_height="36dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Space
                    android:id="@+id/space3"
                    android:layout_width="233dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/activity_mySensors_textViewTemperatureSensorName"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewPressure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/activity_mySensors_textView_pressureSensorName"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewHumidity"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/activity_mySensors_textView_humiditySensorName"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textViewValueTemperature"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewValuePressure"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textViewValueHumidity"
                        android:layout_width="70dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textSize="20sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textViewMsgInformative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/txtViewMsgInformative"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:id="@+id/space5"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Space
                    android:layout_width="81dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="299dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/listViewInformativeMessage"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
